arkts_static_test/03_Types/ets_cases/3.2_User_Defined_Types/compile-fail/TYP_03_02_018_FAIL_TYPE_PARAM_CONSTRAINT.ets
/**
 * @id TYP_03_02_018_FAIL_TYPE_PARAM_CONSTRAINT
 * @expect compile-fail
 * @section 3.2
 * @design 类型参数超出约束: 泛型实例化类型不满足 extends 约束应编译失败
 * @note 反向用例：验证该场景应产生编译时错误
 */
class Base {
  baseMethod(): void {}
}

class G<T extends Base> {
  field: T
  constructor(f: T) {
    this.field = f
  }
}

function testTypeParamConstraintFail(): void {
  let g: G<Base> = new G<Base>(new Base())
  let g2: G<Object> = new G<Object>(new Object())
}